Progression 0.4.1
  Fix click position for popup toggle

Progression 0.4.0
  Add Support for Thermal Expansion Machinist's Workbench
  Add Support for Thaumcraft Worktable
  Added On Eaten Trigger
  Added On Achievement Trigger
  Added Remove Item Reward
  Add Achievement Popup when completing a Criteria (can be toggled off per criteria)
  Can drag the mouse to scroll through the tree editor
  Only display links when criteria are in the same tab
  Speed will now work on negative speeds, as well as not require sprint pressing
  Add three booleans to speed, whether it affects land, air or water speed
  Criteria now stored in seperate areas for ssp/smp
  Fix a bunch of things?
  
Progression 0.3.8
  Fix commands in smp

Progression 0.3.7
  Fix Obtain Trigger
  Add config to disable nei display for locked recipes

Progression 0.3.6
  Fix saving of items with nbt
  Move some things from options to criteria.json where it applies
  Make Obtain trigger check every 1 and a half seconds instead of every tick
  Allow changing of the item to to open the gui
  Fix Potential crash when rendering criteria
  More reliably add inventory items to the item selector

Progression 0.3.5
  Mods will now bypass the system if there isn't support for them added, instead of not working
  Add Support for Forestry Worktable
  Add Support for Autopackager mod
  Fix Potential crash with Obtain Trigger

Progression 0.3.4
  Fix Potential crash when rendering certain entities in the editor

Progression 0.3.3
  Fix Crash when using the points trigger
  Fix Triggers sometimes firing more than once
  Fix some ordering issues, meaning not everything would fire correctly
  Fix resetting of player data in survival when opening the book
  Fix potential crash when saving json, due to a corrupted criteria
  Shuffle Trigger fire order

Progression 0.3.2
  IMPORTANT:
  Added two config options for 'unclaimed' tile entities in the config