@@ -1,3 +1,3 @@
 minecraft_version=1.7.10
 forge_version=10.13.2.1291
-mod_version=0.4.0
+mod_version=0.4.1
